# ttpd

./: .gitignore  .hgignore  .project  .pydevproject  AUTHORS  ChangeLog  INSTALL  MANIFEST  MANIFEST.in  Makefile.am  README  README.old_busstuc.lingit.no_address  USAGE  aclocal.m4  configure.ac  distribute_newest_deb.sh  extradefs.mk  log_filter  release.sh  secretdefs.mk  secretdefs.mk.tmpl  setup.cfg.in  setup.py  setup.py.in  spørsmål.txt  ttpc  ttpd  ttpd_analyze  ttpdctl
TTP/: CoreMessage.py  ESolutionsMessage.py  EncapsulateTUC.py  Handler.py  LogHandler.py  Message.py  Options.py  PayExMessage.py  Server.py  TTP.py  TTPDLogHandler.py  TTPServer.py  TUCThread.py  ThreadPool.py  _TTP.py  __init__.py  daemon.py  num_hash.py  tad.py
TTP/payex_prod/: PxSms_client.py  PxSms_server.py  PxSms_types.py
TTP/payex_test/: PxSms_server.py  PxSms_types.py  test.payex.com-pxsms.wsdl
doc/: Makefile  Makefile.am  achicago.bst  acronyms.tex  alist.txt  bibliography.bib  epyfix.sty  include_src.tex  lst_src.txt  mkalist.sh  mkhelpdoc.sh  mksrcdoc.sh  taocparrows.mp  ttpd_documentation.itx  ttpd_documentation.ps  ttpd_documentation.tex  ttpdarchitecture.mp  ttpdarchitecture.ps  ttpdarchitecture_1.eps
etc/: Makefile.am  gistfile1.sh
etc/apache2/: Makefile.am
etc/apache2/sites-available/: busstuc.lingit.no.in
etc/cron.d/: ttpd-sms.in  ttpd-web.in  ttpd.in
etc/default/: Makefile.am  ttpd.in
etc/init.d/: Makefile.am  ttpd-orig.in  ttpd.in
etc/logrotate.d/: Makefile.am  ttpd.in
init_scripts/: ttpdctl
lib/TTP/: Billing.py  CoreMessage.py  CorePayExMessage.py  Definitions.py  Definitions.py.in  ESolutionsMessage.py  EncapsulateTUC.py  Handler.py  LogHandler.py  Message.py  Options.py  PSWinComMessage.py  PayExMessage.py  Server.py  TUCThread.py  ThreadPool.py  __init__.py  daemon.py  num_hash.py  tad.py
lib/TTP/payex_prod-old/: PxSms_services.py  PxSms_services_types.py
lib/TTP/payex_test/: PxSms_client.py
lib/TTP/payex_test-old/: PxSms_services.py
lib/init/: vars.sh
src/: Makefile.am  post-install.sh.in  pre-uninstall.sh.in  ttpc  ttpd  ttpd_analyze  ttpd_log_filter  ttpdctl
statistics/: Makefile.am  general_config.sh  general_config.sh.in  last_52_weeks.sh  last_52_weeks.sh.in  last_week.sh  last_week.sh.in  this_week.sh  this_week.sh.in  today.sh  today.sh.in
statistics/sms/: general_config.sh.in  last_52_weeks.sh.in  last_week.sh.in  this_week.sh.in  today.sh.in
statistics/web/: Makefile.am  general_config.sh.in  last_52_weeks.sh.in  last_week.sh.in  this_week.sh.in  today.sh.in
ttp/: EncapsulateTUC.py  TTPHandler.py  ThreadPool.py  daemon.py  num_hash.py  setup.py
www/: Makefile.am
www/busstuc.lingit.no/: Makefile.am  body_style.inc  bot.php  busstuc_json_demo.html  busstuc_json_demo.js  bust.php  egenskaper.php  index.php  instruksjoner.php  json.php  json_form.php  ombustuc.php  sms_post.php  sms_post_tester.php  tuc.inc.in  tucq.inc  tucq_top.inc  tucsms.php
www/busstuc.lingit.no-team-trafikk/: README  bot.php  tuc.inc.in  tucq.inc
www/busstuc.lingit.no/tuc_stats/: index.php
www/busstuc.lingit.no/web_stats/: index.php
